--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="body">
       <div class="navibar">
         <a href="#" id="logo">
-          <img src ="https://bakey.codeit.kr/files/629/images/logo.png" height="20">
+          <img src ="img/" height="20">
         </a>
       
         <ul id="menu">
@@ -29,54 +29,9 @@
       <div class="products">
         <h3>Gallery</h3>
          <div class="product-list">
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
-           <a href="#" class="product">
-             <img src="https://bakey.codeit.kr/files/629/images/sunglasses.jpg">
-           </a>
-
+            <div class="row">
+              <div class="col-3">
+                <img src="img/1" alt="1">
            <div class="clearfix"></div>
          
          </div> <!--list-->
