--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <div class="product-list">
             <div class="row">
               <div class="col-3">
-                <img src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
+                <img class="block" src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
               </div>
             </div>
            <div class="clearfix"></div>
