--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <h3>Gallery</h3>
          <div class="product-list">
             <div class="row">
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
                 <img class="block" src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
               </div>
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
                 <img class="block" src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
               </div>
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
                 <img class="block" src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
               </div>
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
                 <img class="block" src="https://i.ibb.co/Q8t26vP/1.jpg" alt="1" border="0">
               </div>
             </div>
