--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
          <div class="product-list">
             <div class="row">
               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
-                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">>
+                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
               </div>
 
               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
-                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">>
+                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
               </div>
 
               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
-                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">>
+                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
               </div>
 
               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
-                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">>
+                <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
               </div>
               
             </div>
