--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       </div> <!--navbar-->
     
       <div class="header"></div>
+
+      <div class="container">
+        <div class="image">
+        </div>
+      </div>
     
       <div class="products">
         <h3>Gallery</h3>
