--- a/index.html
+++ b/index.html
@@ -31,77 +31,77 @@
         </div>
       </div>
     
-      <div class="products">
+      <div class="Gallery">
         <h3>Gallery</h3>
          <div class="product-list">
             <div class="row">
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
               
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
               </div>
 
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12 margin10">
+               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                 <div class="imgcont">
                   <img class="block" src="https://i.ibb.co/ZhGynrs/250-250.png" alt="250-250" border="0">
                 </div>
