--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="body">
       <div class="navibar">
         <a href="#" id="logo">
-          <img src ="https://i.ibb.co/dtWPNZz/200-50.png" height="20">
+          <img src="https://i.ibb.co/Rppz5JH/200-50-1.png" alt="200-50-1" border="0" height="20">
         </a>
       
         <ul id="menu">
