--- a/index.html
+++ b/index.html
@@ -1,142 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>TOURISM</title>
-    <meta charset="utf-8" />
-    <link href="css/styles.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/yungon.css">
-      <link rel="script" href="https://code.jquery.com/jquery-3.0.0.slim.js">
-  </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <meta http-equiv="refresh" content="0;url=main.html">
+</head>
+<body>
 
-  <body>
-    <div class="body">
-      <div class="navibar">
-        <a href="#" id="logo">
-          <img src="https://i.ibb.co/Rppz5JH/200-50-1.png" alt="200-50-1" border="0" height="20">
-        </a>
-
-        <ul id="menu">
-         <li><a href="#">로그인</a></li>
-         <li><a href="#">회원가입</a></li>
-         <li><a href="#">English</a></li>
-
-        </ul>
-      </div> <!--navbar-->
-
-<!--      <div class="header">-->
-
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://i.ibb.co/6nyT35H/22.png" alt="22">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://i.ibb.co/y8rTSfQ/33.png" alt="33">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://i.ibb.co/D5C45tB/1440-480.png" alt="44">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!--      </div>-->
-
-      <div class="cont">
-        <div class="image">
-        </div>
-      </div>
-
-      <div class="Gallery">
-        <h3>Gallery</h3>
-         <div class="product-list">
-            <div class="row">
-              <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                  <div class="imgcont">
-                    <img class="block" src="https://i.ibb.co/5FGBztT/1.png" alt="1" border="0">
-                  </div>
-<!--                  <div class="imginfo">-->
-<!--                    Changwon, AM 9:37-->
-<!--                  </div>-->
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/bJhsk7G/2.png" alt="2" border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/xJDR9WR/3.png" alt="3"  border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/qDJSbz0/4.png" alt="4" border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/nR2ryVC/5.png" alt="5" border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/QY0Dcgp/6.png" alt="6"  border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/JnGKj7C/7.png" alt="7"  border="0">
-                </div>
-              </div>
-
-               <div class="col-xl-3 col-lg-3 col-md-6 col-12">
-                <div class="imgcont">
-                  <img class="block" src="https://i.ibb.co/VmLt68J/8.png" alt="8"  border="0">
-                </div>
-              </div>
-
-           <div class="clearfix"></div>
-
-         </div> <!--list-->
-
-      </div> <!--products-->
-
-
-
-      <div class="header1"></div>
-
-      <div class="footer">
-        <a href="http://facebook.com">
-          <img src="https://bakey.codeit.kr/files/629/images/facebook.png" height="20">
-        </a>
-        <a href="http://instagram.com">
-          <img src="https://bakey.codeit.kr/files/629/images/instagram.png" height="20">
-        </a>
-        <a href="http://twitter.com">
-        <img src="https://bakey.codeit.kr/files/629/images/twitter.png" height="20">
-        </a>
-
-      </div>
-      <!-- footer -->
-
-    </div>
-    <!-- class body -->
-    </div>
-  </body>
-
+</body>
 </html>
